kubernetes-networks/dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  labels: 
    name: kubernetes-dashboard
  annotations:
      #nginx.ingress.kubernetes.io/rewrite-target: /
      #nginx.ingress.kubernetes.io/ssl-redirect: "false"
      #nginx.ingress.kubernetes.io/rewrite-target: /
      #nginx.ingress.kubernetes.io/app-root: /
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      kubernetes.io/ingress.class: nginx
      nginx.org/ssl-services: kubernetes-dashboard-svc
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - http:
        paths:
          - path: /dashboard
            backend:
              serviceName: kubernetes-dashboard-svc
              servicePort: 8080
